--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-andrea",
-  "homepage": "https://aandreasiles.github.io/andrea-portfolio/",
+  "homepage": "https://aandreasiles.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
